feat: complete finish creator/ pages fix: fix page type error

--- a/biome.json
+++ b/biome.json
@@ -16,7 +16,9 @@
     "enabled": true,
     "rules": {
       "recommended": true,
-      "style": {},
+      "style": {
+        "noUnusedTemplateLiteral": "off"
+      },
       "suspicious": {
         "noExplicitAny": "off"
       }
