--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@pinia/nuxt": "^0.5.1",
     "@vueuse/nuxt": "^10.7.1",
     "h3": "^1.10.0",
-    "pinia": "^2.1.7"
+    "pinia": "^2.1.7",
+    "vue-advanced-cropper": "^2.8.8",
+    "vuedraggable": "next"
   }
 }
