--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "@pinia/nuxt": "^0.5.1",
+    "@vueuse/integrations": "^10.7.2",
     "@vueuse/nuxt": "^10.7.1",
+    "async-validator": "^4.2.5",
     "h3": "^1.10.0",
     "lodash-es": "^4.17.21",
     "pinia": "^2.1.7",
