--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "devDependencies": {
     "@biomejs/biome": "^1.5.1",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
+    "@types/highlight.js": "^10.1.0",
     "@types/lodash-es": "^4.17.12",
+    "@types/uuid": "^9.0.7",
     "nuxt": "^3.9.1",
     "sass": "^1.69.7",
     "vite-plugin-vuetify": "^2.0.1",
@@ -27,8 +29,10 @@
     "@vueuse/nuxt": "^10.7.1",
     "async-validator": "^4.2.5",
     "h3": "^1.10.0",
+    "highlight.js": "^11.9.0",
     "lodash-es": "^4.17.21",
     "pinia": "^2.1.7",
+    "uuid": "^9.0.1",
     "vue-advanced-cropper": "^2.8.8",
     "vuedraggable": "next"
   }
