--- a/package.json
+++ b/package.json
@@ -1,26 +1,15 @@
 {
   "name": "nuxt-app",
-  "private": true,
   "type": "module",
+  "private": true,
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "^1.5.1",
-    "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
-    "@types/highlight.js": "^10.1.0",
-    "@types/lodash-es": "^4.17.12",
-    "@types/uuid": "^9.0.7",
-    "nuxt": "^3.9.1",
-    "sass": "^1.69.7",
-    "vite-plugin-vuetify": "^2.0.1",
-    "vue": "^3.4.10",
-    "vue-router": "^4.2.5",
-    "vuetify": "^3.4.10"
+    "postinstall": "nuxt prepare",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
@@ -35,5 +24,28 @@
     "uuid": "^9.0.1",
     "vue-advanced-cropper": "^2.8.8",
     "vuedraggable": "next"
+  },
+  "devDependencies": {
+    "@antfu/eslint-config": "^2.6.3",
+    "@biomejs/biome": "^1.5.1",
+    "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
+    "@types/highlight.js": "^10.1.0",
+    "@types/lodash-es": "^4.17.12",
+    "@types/uuid": "^9.0.7",
+    "eslint": "^8.56.0",
+    "lint-staged": "^15.2.0",
+    "nuxt": "^3.9.1",
+    "sass": "^1.69.7",
+    "simple-git-hooks": "^2.9.0",
+    "vite-plugin-vuetify": "^2.0.1",
+    "vue": "^3.4.10",
+    "vue-router": "^4.2.5",
+    "vuetify": "^3.4.10"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "pnpm lint-staged"
+  },
+  "lint-staged": {
+    "*": "eslint --fix"
   }
 }
