--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+  "editor.defaultFormatter": "dbaeumer.vscode-eslint",
   "eslint.experimental.useFlatConfig": true,
   "prettier.enable": false,
 
@@ -6,6 +7,7 @@
     "source.fixAll.eslint": "explicit",
     "source.organizeImports": "never"
   },
+  "editor.formatOnSave": false,
 
   "eslint.rules.customizations": [
     { "rule": "style/*", "severity": "off" },
