--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "h3": "^1.10.0",
     "highlight.js": "^11.9.0",
     "lodash-es": "^4.17.21",
+    "nuxt3-winston-log": "^0.5.0",
     "pinia": "^2.1.7",
     "uuid": "^9.0.1",
     "vue-advanced-cropper": "^2.8.8",
@@ -32,6 +33,7 @@
     "@types/highlight.js": "^10.1.0",
     "@types/lodash-es": "^4.17.12",
     "@types/uuid": "^9.0.7",
+    "@types/winston": "^2.4.4",
     "eslint": "^8.56.0",
     "lint-staged": "^15.2.0",
     "nuxt": "^3.9.1",
@@ -43,7 +45,7 @@
     "vuetify": "^3.4.10"
   },
   "simple-git-hooks": {
-    "pre-commit": "pnpm lint-staged"
+    "pre-commit": "bun lint-staged"
   },
   "lint-staged": {
     "*": "eslint --fix"
